--- a/main/assets/bundles/bundle.properties
+++ b/main/assets/bundles/bundle.properties
@@ -10,8 +10,8 @@ item.disintegration-silver.name = Silver
 item.disintegration-silver.description = Used in electricity transport and building construct.
 item.disintegration-heavite.name = Heavite
 item.disintegration-heavite.description = Used in hard defence and units.
-item.disintegration-concussion-alloy.name = Concussion Alloy
-item.disintegration-concussion-alloy.description = Used in electric turret and factorys build.
+item.disintegration-magnetism-alloy.name = Concussion Alloy
+item.disintegration-magnetism-alloy.description = Used in electric turret and factorys build.
 item.disintegration-ionic-alloy.name = Ionic Alloy
 item.disintegration-ionic-alloy.description = Used in electric turret and ammo.
 item.disintegration-iridium.name = Iridium
@@ -24,8 +24,8 @@ liquid.disintegration-liquid-crystal.description = Used in advanced material pro
 liquid.disintegration-oxygen.name = Oxygen
 liquid.disintegration-oxygen.description = Used as an oxidizing agent in material production, and as fuel. Moderately explosive.
 
-block.disintegration-concussion-alloy-smelter.name = Concussion Alloy Smelter
-block.disintegration-concussion-alloy-smelter.description = Fuses silver and silicon to concussion alloy.
+block.disintegration-magnetism-alloy-smelter.name = Concussion Alloy Smelter
+block.disintegration-magnetism-alloy-smelter.description = Fuses silver and silicon to concussion alloy.
 block.disintegration-heavite-compressor.name = Heavite Compressor
 block.disintegration-heavite-compressor.description = Compress iron and graphite to heavite.
 block.disintegration-boiler.name = Boiler
@@ -73,6 +73,8 @@ block.disintegration-burning-heater.description = Heating by burning flammable m
 
 block.disintegration-pressure-drill.name = Pressure Drill
 block.disintegration-pressure-drill.description = When placed on ore, outputs items at a slow pace indefinitely. Only capable of mining basic resources.
+block.disintegration-portable-drill.name = Portable Drill
+block.disintegration-portable-drill.description = When placed on ore, outputs items at a slow pace indefinitely. Only capable of mining basic resources.\n it can move and automatically move items to the nearest unloading point
 
 block.disintegration-laser-device.name = Laser Device
 block.disintegration-laser-device.description = Genearate laser by power.
@@ -173,9 +175,6 @@ block.disintegration-blast-mine.name = Blast Mine
 block.disintegration-blast-mine.description = Blasts upon enemy unit contact.
 block.disintegration-repair-drone-station.name = Repair Drone Station
 block.disintegration-repair-drone-station.description = Constructs repair drones.\n Drones automatically repairs blocks in its vicinity.
-
-block.disintegration-ore-iridium.name = Iridium
-block.disintegration-ore-silver.name = Silver
 
 unit.disintegration-lancet.name = Lancet
 unit.disintegration-lancet.description = Fires ion balls at nearby enemies.
