--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,10 @@ org.gradle.jvmargs = \
 --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
 --add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED
 
-mindustryVersion = v145
-arcVersion = v145
-entVersion = 1.1.2
+mindustryVersion = v146
+arcVersion = v146
+entVersion = v146.0.1
+arcLibraryVersion = v1.0.5.1
 
 kapt.include.compile.classpath = false
 kotlin.stdlib.default.dependency = false
