--- a/main/assets/bundles/bundle.properties
+++ b/main/assets/bundles/bundle.properties
@@ -6,19 +6,27 @@ spacestationwhitespace = true
 
 item.disintegration-iron.name = Iron
 item.disintegration-iron.description = Used in basic buildings construct.
+item.disintegration-steel.name = Steel
+item.disintegration-steel.description = Used in durable structures.
 item.disintegration-silver.name = Silver
 item.disintegration-silver.description = Used in electricity transport and building construct.
 item.disintegration-heavite.name = Heavite
 item.disintegration-heavite.description = Used in hard defence and units.
-item.disintegration-magnetism-alloy.name = Concussion Alloy
-item.disintegration-magnetism-alloy.description = Used in electric turret and factorys build.
+item.disintegration-magnetism-alloy.name = Magnetism Alloy
+item.disintegration-magnetism-alloy.description = Used in electric turret and factories.
 item.disintegration-ionic-alloy.name = Ionic Alloy
 item.disintegration-ionic-alloy.description = Used in electric turret and ammo.
+item.disintegration-conduction-alloy.name = Conduction Alloy
+item.disintegration-conduction-alloy.description = Used in electric transmission and advanced electrics.
+item.disintegration-conduction-alloy.detail = Has superconductivity. Transition temperature is 163K. In the Omurlo environment, it is easy to reach.
 item.disintegration-iridium.name = Iridium
-item.disintegration-iridium.description = Used in high-hardness buildings defence.
+item.disintegration-iridium.description = Used in high-hardness armors.
 
-liquid.disintegration-steam.name = steam
-liquid.disintegration-steam.description = From boiling water.
+item.disintegration-space-station-panel.name = Space Station Panel
+item.disintegration-space-station-panel.description = Used in space station construction.
+
+liquid.disintegration-steam.name = Steam
+liquid.disintegration-steam.description = Come from boiling water.
 liquid.disintegration-liquid-crystal.name = Liquid Crystal
 liquid.disintegration-liquid-crystal.description = Used in advanced material production and coolant in reactors.
 liquid.disintegration-oxygen.name = Oxygen
@@ -38,21 +46,25 @@ block.disintegration-silicon-refiner.name = Silicon Refiner
 block.disintegration-silicon-refiner.description = Refines silicon from sand and coal.
 block.disintegration-graphite-compressor.name = Graphite Compressor
 block.disintegration-graphite-compressor.description = Compresses coal into graphite with high pressure.
+block.disintegration-steel-smelter.name = Steel Smelter
+block.disintegration-steel-smelter.description = Fuses iron and coal into steel.
+block.disintegration-steel-blast-furnace.name = Steel Blast Furnace
+block.disintegration-steel-blast-furnace.description = Fuses iron and coal into steel. Requires heat.
 
 block.disintegration-iron-conveyor.name = Iron Conveyor
 block.disintegration-iron-conveyor.description = Transports items forward.
 block.disintegration-iron-bridge-conveyor.name = Iron Bridge Conveyor
 block.disintegration-iron-bridge-conveyor.description = Transports items over terrain or buildings.
 block.disintegration-alternate-overflow-gate.name = Alternate Overflow Gate
-block.disintegration-alternate-sorter.description = Only outputs items to the left and right if the front path is blocked.  \n change mode when clicked
+block.disintegration-alternate-sorter.description = Only outputs items to the left and right if the front path is blocked. \n Changes mode when clicked
 block.disintegration-iron-sorter.name = Iron Sorter
 block.disintegration-iron-sorter.description =  If an input item matches the selection, it passes forward. Otherwise, the item is outputted to the left and right.
 block.disintegration-inverted-iron-sorter.name = Inverted Iron Sorter
 block.disintegration-inverted-iron-sorter.description = Similar to a standard sorter, but outputs selected items to the sides instead.
-block.disintegration-fast-junction.name = Fast Junction
-block.disintegration-fast-junction.description = Acts as a bridge for two crossing conveyor belts.
-block.disintegration-fast-router.name = Fast Router
-block.disintegration-fast-router.description = Distributes input items to 3 output directions equally.
+block.disintegration-iron-junction.name = Iron Junction
+block.disintegration-iron-junction.description = Acts as a bridge for two crossing conveyor belts.
+block.disintegration-iron-router.name = Iron Router
+block.disintegration-iron-router.description = Distributes input items to 3 output directions equally.
 block.disintegration-iridium-conveyor.name = Iridium Conveyor
 block.disintegration-iridium-conveyor.description = Transports items forward. Faster than iron conveyor.
 
@@ -123,6 +135,14 @@ block.disintegration-aegis.description = Fires laser bolts that damage enemies a
 block.disintegration-permeation.name = Permeation
 block.disintegration-permeation.description = Fires three close-range piercing bullets at nearby enemies.
 
+block.disintegration-iron-wall.name = Iron Wall
+block.disintegration-iron-wall.description = Protects structures from enemy projectiles.
+block.disintegration-iron-wall-large.name = Large Iron Wall
+block.disintegration-iron-wall-large.description = Protects structures from enemy projectiles.
+block.disintegration-steel-wall.name = Steel Wall
+block.disintegration-steel-wall.description = Protects structures from enemy projectiles.
+block.disintegration-steel-wall-large.name = Large Steel Wall
+block.disintegration-steel-wall-large.description = Protects structures from enemy projectiles.
 block.disintegration-iridium-wall.name = Iridium Wall
 block.disintegration-iridium-wall.description = Protects structures from enemy projectiles, periodically releasing electric shards upon contact.
 block.disintegration-iridium-wall-large.name = Large Iridium Wall
@@ -175,6 +195,9 @@ block.disintegration-blast-mine.name = Blast Mine
 block.disintegration-blast-mine.description = Blasts upon enemy unit contact.
 block.disintegration-repair-drone-station.name = Repair Drone Station
 block.disintegration-repair-drone-station.description = Constructs repair drones.\n Drones automatically repairs blocks in its vicinity.
+
+block.disintegration-space-station-launch-pad.name = Space Station Launch Pad
+block.disintegration-space-station-launch-pad.description = Launches a space station to selected planet.
 
 unit.disintegration-lancet.name = Lancet
 unit.disintegration-lancet.description = Fires ion balls at nearby enemies.
