byd github action

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ ext{
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
     gamePath = "D:/mdt/V7-ARC/Mindustry.exe"
     modPath = "${System.getenv("USERPROFILE")}/AppData/Roaming/Mindustry/mods"
+    isWindows = System.getProperty("os.name").toLowerCase().contains("windows")
 
     arc = {String module ->
         return "com.github.Anuken.Arc$module:$arcVersion"
@@ -90,7 +91,8 @@ task jarAndroid{
         //collect dependencies needed for desugaring
         def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")
 
-        def d8 = System.properties['os.name'].toLowerCase().contains('win') ? "$sdkRoot/build-tools/34.0.0/d8.bat" : "d8"
+        def d8 = isWindows ? "d8.bat" : "d8"
+
         //dex and desugar files - this requires d8 in your PATH
         "$d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
                 .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
