--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ org.gradle.jvmargs = \
 
 mindustryVersion = v146
 arcVersion = v146
-entVersion = v1.2.0
+entVersion = 1.2.0
 arcLibraryVersion = v1.0.5.1
 
 kapt.include.compile.classpath = false
