--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,10 @@ sourceSets.main.java.srcDirs = ["/main/src"]
 
 repositories{
     mavenCentral()
-    maven{ url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
-    maven{ url  'https://raw.githubusercontent.com/Zelaux/Repo/master/repository' }
-    maven{ url 'https://www.jitpack.io' }
+    maven{url 'https://oss.sonatype.org/content/repositories/snapshots/'}
+    maven{url 'https://oss.sonatype.org/content/repositories/releases/'}
+    maven{url 'https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository'}
+    maven{url 'https://jitpack.io'}
 }
 
 java{
