--- a/main/assets/bundles/bundle.properties
+++ b/main/assets/bundles/bundle.properties
@@ -61,6 +61,8 @@ block.disintegration-surge-furnace.name = Surge Furnace
 block.disintegration-surge-furnace.description = Fuses silver, lead and silicon into surge alloy.
 block.disintegration-centrifuge.name = Centrifuge
 block.disintegration-centrifuge.description = Separates slag into iron, silver and iridium. Server only.
+block.disintegration-blast-compound-mixer.name = Blast Compound Mixer
+block.disintegration-blast-compound-mixer.description = Produces blast compound from coal and algae water.
 
 block.disintegration-nitride-synthesizer.name = Nitride Synthesizer
 block.disintegration-nitride-synthesizer.description = Synthesizes nitride from nitrogen and gallium. Requires heat and hydrogen.
@@ -160,8 +162,12 @@ block.disintegration-axe.name = Axe
 block.disintegration-axe.description = Fires quadriparts homing missiles at enemies.
 block.disintegration-voltage.name = Voltage
 block.disintegration-voltage.description = Fires an arc ball at enemies.
-block.disintegration-holy.name = Holy
-block.disintegration-holy.description = Fires laser bolts that damage enemies and repair allied structures.
+block.disintegration-awake.name = Awake
+block.disintegration-awake.description = Fires laser bolts that damage enemies and repair allied structures.
+block.disintegration-twist.name = Twist
+block.disintegration-twist.description = Fires twisting pairs of bullets at enemy targets.
+block.disintegration-regeneration.name = Regeneration
+block.disintegration-regeneration.description = Fires explosive energy projectiles.
 block.disintegration-finspray.name = Finspray
 block.disintegration-finspray.description = Fires matter dust at enemies.
 block.disintegration-ambush.name = Ambush
@@ -176,6 +182,8 @@ block.disintegration-focus.name = Focus
 block.disintegration-focus.description = Fires a single-target laser at enemy targets.
 block.disintegration-condense.name = Condense
 block.disintegration-condense.description = Fires a slow-moving single-target freezing laser at enemy targets.
+block.disintegration-torch.name = Torch
+block.disintegration-torch.description = Fires a continuous jet of flame at enemy targets. Pierces armor.
 block.disintegration-blaze.name = Blaze
 block.disintegration-blaze.description = Charges and fires a persistent laser beam at nearby enemies. Requires coolant to operate.
 block.disintegration-impact.name = Impact
@@ -209,6 +217,10 @@ block.disintegration-iridium-wall-large.name = Large Iridium Wall
 block.disintegration-iridium-wall-large.description = Protects structures from enemy projectiles, periodically releasing shards upon contact.
 block.disintegration-projector-wall.name = Projector Wall
 block.disintegration-projector-wall.description = Protects structures from enemy projectiles. Deploys a shield that absorbs most projectiles when power is provided. Conducts power.
+block.disintegration-conduction-alloy-wall.name = Conduction Alloy Wall
+block.disintegration-conduction-alloy-wall.description = Protects structures from enemy projectiles. Absorbs lasers and electric arcs.
+block.disintegration-conduction-alloy-wall-large.name = Large Conduction Alloy Wall
+block.disintegration-conduction-alloy-wall-large.description = Protects structures from enemy projectiles. Absorbs lasers and electric arcs.
 
 block.disintegration-nitride-wall.name = Nitride Wall
 block.disintegration-nitride-wall.description = Protects structures from enemy projectiles, periodically releasing lasers upon contact.
@@ -227,6 +239,8 @@ block.disintegration-payload-deconstructor.name = Payload Deconstructor
 block.disintegration-payload-deconstructor.description = Deconstructs structures and units. Returns 100% of build cost.
 block.disintegration-magnetized-payload-rail.name = Magnetized Payload Rail
 block.disintegration-magnetized-payload-rail.description = Moves large payloads, such as units from factories. Magnetic. Usable in zero-G environments.
+block.disintegration-magnetized-payload-rail-short.name = Short Magnetized Payload Rail
+block.disintegration-magnetized-payload-rail-short.description = Moves large payloads, such as units from factories. Magnetic. Usable in zero-G environments.
 block.disintegration-payload-accelerator.name = Payload Accelerator
 block.disintegration-payload-accelerator.description = Moves large payloads. Accelerates payloads.
 block.disintegration-payload-decelerator.name = Payload Decelerator
@@ -278,9 +292,20 @@ block.disintegration-blast-mine.name = Blast Mine
 block.disintegration-blast-mine.description = Blasts upon enemy unit contact.
 block.disintegration-repair-drone-station.name = Repair Drone Station
 block.disintegration-repair-drone-station.description = Constructs repair drones.\n Drones automatically repairs blocks in its vicinity.
+block.disintegration-repairer.name = Repairer
+block.disintegration-repairer.description = Repairs blocks in its vicinity.
 
 block.disintegration-space-station-launch-pad.name = Space Station Launch Pad
 block.disintegration-space-station-launch-pad.description = Launches a space station to selected planet.
+block.disintegration-orbital-launch-pad.name = Orbital Launch Pad
+block.disintegration-orbital-launch-pad.description = Launches batches of items to space stations.
+block.disintegration-orbital-launch-pad.details = Orbital system for ground-to-space-station transportation of resources.
+block.disintegration-space-launch-pad.name = Space Launch Pad
+block.disintegration-space-launch-pad.description = Launches batches of items to selected sectors.
+block.disintegration-space-launch-pad.details = Orbital system for space-station-to-ground transportation of resources.
+block.disintegration-interplanetary-launch-pad.name = Interplanetary Launch Pad
+block.disintegration-interplanetary-launch-pad.description = Launches batches of items to selected space station.
+block.disintegration-interplanetary-launch-pad.details = Orbital system for space-station-to-space-station transportation of resources.
 
 unit.disintegration-lancet.name = Lancet
 unit.disintegration-lancet.description = Fires laser bolts at nearby enemies.
