--- a/settings.gradle
+++ b/settings.gradle
@@ -4,8 +4,7 @@ pluginManagement{
         maven{url 'https://www.jitpack.io'}
     }
 }
-include 'core', 'omurlo'
-
+//include "tools"
 if(JavaVersion.current().ordinal() < JavaVersion.VERSION_17.ordinal()){
     throw new GradleException("JDK 17 is a required minimum version. Yours: ${System.getProperty('java.version')}")
 }
