--- a/main/assets/bundles/bundle.properties
+++ b/main/assets/bundles/bundle.properties
@@ -1,4 +1,4 @@
-mod.disintegration.name=disintegration
+mod.disintegration.name=Disintegration
 mod.disintegration.description=A WIP V7 mindustry JAVA mod
 spacestation=Space Station
 spacestationwhitespace=true
