--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,7 @@ mindustryVersion = v146
 arcVersion = v146
 entVersion = v146.0.7
 arcLibraryVersion = v1.0.5.1
+multiCrafterLibVersion = v1.8
 
 kapt.include.compile.classpath = false
 kotlin.stdlib.default.dependency = false
