--- a/main/assets/bundles/bundle.properties
+++ b/main/assets/bundles/bundle.properties
@@ -1,7 +1,8 @@
 mod.disintegration.name=Disintegration
 mod.disintegration.description=A WIP V7 mindustry JAVA mod
 spacestation=Space Station
-spacestationwhitespace=true
+whitespacebetween=true
+cell=Cell
 item.disintegration-iron.name=Iron
 item.disintegration-iron.description=Used in basic buildings construct.
 item.disintegration-steel.name=Steel
@@ -29,6 +30,7 @@ liquid.disintegration-liquid-crystal.name=Liquid Crystal
 liquid.disintegration-liquid-crystal.description=Used in advanced material production and coolant in reactors.
 liquid.disintegration-oxygen.name=Oxygen
 liquid.disintegration-oxygen.description=Used as an oxidizing agent in material production, and as fuel. Moderately explosive.
+liquid.disintegration-algal-water.name=Algal Water
 block.disintegration-magnetism-alloy-smelter.name=Magnetism Alloy Smelter
 block.disintegration-magnetism-alloy-smelter.description=Fuses silver, silicon and nitrogen to magnetism alloy.
 block.disintegration-conduction-alloy-smelter.name=Conduction Alloy Smelter
@@ -47,6 +49,10 @@ block.disintegration-silicon-refiner.name=Silicon Refiner
 block.disintegration-silicon-refiner.description=Refines silicon from sand and coal.
 block.disintegration-graphite-compressor.name=Graphite Compressor
 block.disintegration-graphite-compressor.description=Compresses coal into graphite with high pressure.
+block.disintegration-space-station-panel-compressor.name=Space Station Panel Compressor
+block.disintegration-space-station-panel-compressor.description=Compresses copper and titanium into space station panel.
+block.disintegration-space-station-panel-compressor-large.name=Large Space Station Panel Compressor
+block.disintegration-space-station-panel-compressor-large.description=Compresses copper and titanium into space station panel.
 block.disintegration-steel-smelter.name=Steel Smelter
 block.disintegration-steel-smelter.description=Fuses iron and coal into steel.
 block.disintegration-steel-blast-furnace.name=Steel Blast Furnace
@@ -54,7 +60,7 @@ block.disintegration-steel-blast-furnace.description=Fuses iron and coal into st
 block.disintegration-surge-furnace.name=Surge Furnace
 block.disintegration-surge-furnace.description=Fuses silver, lead and silicon into surge alloy.
 block.disintegration-centrifuge.name=Centrifuge
-block.disintegration-centrifuge.description=Separates slag into iron, silver and iridium. Server only.
+block.disintegration-centrifuge.description=Separates slag into iron, silver and iridium.
 block.disintegration-blast-compound-mixer.name=Blast Compound Mixer
 block.disintegration-blast-compound-mixer.description=Produces blast compound from coal and algae water.
 block.disintegration-nitride-synthesizer.name=Nitride Synthesizer
@@ -92,6 +98,8 @@ block.disintegration-iron-power-node-large.name=Large Iron Power Node
 block.disintegration-iron-power-node-large.description=An advanced power node with greater range.
 block.disintegration-power-capacitor.name=Power Capacitor
 block.disintegration-power-capacitor.description=Stores power in times of surplus energy. Outputs power in times of deficit.
+block.disintegration-arc-reactor.name=Arc Reactor
+block.disintegration-arc-reactor.description=Generates power with surge's charge and magnetism alloy's magnetism.
 block.disintegration-neoplasm-generator.name=Neoplasm Generator
 block.disintegration-neoplasm-generator.description=Generates power with neoplasm. Will inflect nearby blocks.
 block.disintegration-space-solar-panel.name=Solar Panel
@@ -149,6 +157,8 @@ block.disintegration-twist.name=Twist
 block.disintegration-twist.description=Fires twisting pairs of bullets at enemy targets.
 block.disintegration-regeneration.name=Regeneration
 block.disintegration-regeneration.description=Fires explosive energy projectiles.
+block.disintegration-holy.name=Holy
+block.disintegration-holy.description=Fires large continuous laser.
 block.disintegration-finspray.name=Finspray
 block.disintegration-finspray.description=Fires matter dust at enemies.
 block.disintegration-ambush.name=Ambush
@@ -225,6 +235,8 @@ block.disintegration-payload-decelerator.name=Payload Decelerator
 block.disintegration-payload-decelerator.description=Decelerates payloads.
 block.disintegration-payload-redirector.name=Payload Redirector
 block.disintegration-payload-redirector.description=Redirectes payloads.
+block.disintegration-payload-cross.name=Payload Cross
+block.disintegration-payload-cross.description=Acts as a bridge for two crossing payload rails.
 block.disintegration-payload-fork-left.name=Payload Fork Left
 block.disintegration-payload-fork-left.description=Splits input payloads into 2 output directions. Functions as a sorter when a filter is set.
 block.disintegration-payload-fork-right.name=Payload Fork Right
@@ -288,8 +300,36 @@ unit.disintegration-spear.name=Spear
 unit.disintegration-spear.description=Shocks all enemy units and structures that enter its energy field. Repairs all allies. Can warp.
 unit.disintegration-epee.name=Epee
 unit.disintegration-epee.description=Fires salvos of missiles and large missiles at enemy targets.
-unit.disintegration-knife.name=Knife
-unit.disintegration-knife.description=Launch stab attack at nearby enemies.
+unit.disintegration-colibri.name=Colibri
+unit.disintegration-colibri.description=Launch stab attack at nearby enemy.
+unit.disintegration-albatross.name=Albatross
+unit.disintegration-albatross.description=Moves toward enemy targets and self-destructs, causing a large laser explosion.
+unit.disintegration-crane.name=Crane
+unit.disintegration-crane.description=Drops clusters of bombs on enemy ground targets.
+unit.disintegration-eagle.name=Eagle
+unit.disintegration-eagle.description=Fires piercing bullets at enemy targets.
+unit.disintegration-phoenix.name=Phoenix
+unit.disintegration-phoenix.description=Fires a massive laser blast that damages enemy targets.
+unit.disintegration-converge.name=Converge
+unit.disintegration-converge.description=Automatically mines iron and lead, depositing it into the core.
+unit.disintegration-cover.name=Cover
+unit.disintegration-cover.description=Fires a single-target bolt at enemy and repairing allied structures.
+unit.disintegration-protect.name=Protect
+unit.disintegration-protect.description=Fires piercing laser beams that damage enemy targets and repairing allied structures.
+unit.disintegration-defend.name=Defend
+unit.disintegration-defend.description=Fires explosive EMP projectiles, dealing significant damage to enemy power networks and repairing allied structures.
+unit.disintegration-harbour.name=Harbour
+unit.disintegration-harbour.description=Shocks all enemy units and structures that enter its energy field. Repairs all allies.
+unit.disintegration-assist.name=Assist
+unit.disintegration-assist.description=Fires bullets at enemy targets. Can float over bodies of liquid.
+unit.disintegration-strike.name=Strike
+unit.disintegration-strike.description=Fires lasers at enemy targets. Can float over bodies of liquid.
+unit.disintegration-coverture.name=Coverture
+unit.disintegration-coverture.description=Fires large explosion splitting bullets at enemy targets. Can float over bodies of liquid.
+unit.disintegration-attack.name=Attack
+unit.disintegration-attack.description=Fires a barrage of missiles at enemy targets. Can float over bodies of liquid.
+unit.disintegration-devastate.name=Devastate
+unit.disintegration-devastate.description=Fires a massive continuous laser beam that damages enemy targets. Can float over bodies of liquid.
 unit.disintegration-verity.name=Verity
 unit.disintegration-verity.description=Fires ion balls at nearby enemies.
 unit.disintegration-truth.name=Truth
@@ -298,8 +338,8 @@ unit.disintegration-solve.name=Solve
 unit.disintegration-solve.description=Fires plasma flames at nearby enemies.
 unit.disintegration-essence.name=Essence
 unit.disintegration-essence.description=Fires piercing bullets at enemy targets.
-unit.disintegration-celestial.name=Celestial
-unit.disintegration-celestial.description=Fires a burst of bullets in a wide cone.
+unit.disintegration-axiom.name=Axiom
+unit.disintegration-axiom.description=Fires a burst of bullets in a wide cone.
 unit.disintegration-separate.name=Separate
 unit.disintegration-separate.description=Builds structures to defend the Pedestal core. Repairs structures with laser bolts.
 unit.disintegration-attract.name=Attract
@@ -317,12 +357,13 @@ planet.disintegration-terminsi.name=Terminsi
 planet.disintegration-cosiuaz.name=Cosiuaz
 planet.disintegration-caelpse.name=Caelpse
 sector.disintegration-launching-area.name=Launching Area
-sector.disintegration-launching-area.description=This is the third planet's begin,take some irons there.
+sector.disintegration-launching-area.description=This is the third planet's begin,take some irons  and lead here.
 sector.disintegration-planetary-monitoring-center.name=Planetary Monitoring Center
-sector.disintegration-planetary-monitoring-center.description=The enemy detects every move of the all of the orbiting celestial body through here.Destroy enemy's core and server
+sector.disintegration-planetary-monitoring-center.description=The enemy detects every move of the all the orbiting celestial body through here.Destroy enemy's core.
 stat.shardchance=Lightning Chance
 stat.sharddamage=Lightning Damage
 bar.laser=Laser
 bar.laseramount=Laser: {0}
 bar.laserpercent=Laser: {0} ({1}%)
+bar.lightpercent = Light: {0} ({1}%)
 unit.laserunits=laser units
